--- a/hsss/css/master.less
+++ b/hsss/css/master.less
@@ -73,10 +73,12 @@ body {
       padding-right: 2px;
     }
     tr:nth-child(even) {
-      background-color: rgb(101, 51, 50);
+      // background-color: rgb(101, 51, 50);
+      background-color: rgb(86, 81, 82);
     }
     tr:nth-child(odd):not(:first-child) {
-      background-color: rgb(90, 43, 44);
+      // background-color: rgb(90, 43, 44);
+      background-color: rgb(79, 74, 75);
     }
     tr td:nth-child(7) {
       font-size: 0;
