--- a/activity/css/master.less
+++ b/activity/css/master.less
@@ -127,7 +127,7 @@ hr {
 .pic {
   width: 1000px;
   box-sizing: border-box;
-  padding: 40px 40px 60px;
+  padding: 40px 40px 40px;
   font-size: 30px;
   line-height: 1.4;
   text-align: justify;
@@ -169,7 +169,7 @@ table {
     }
   }
   td {
-    padding: 9px 10px 11px;
+    padding: 8px 10px 11px;
     &:not(:last-child) {
       border-right: 2px solid @blue;
     }
@@ -191,6 +191,10 @@ table {
     justify-content: center;
     align-items: center;
     text-align: center;
+    > img {
+      width: 348px;
+      height: 25px;
+    }
     .box {
       display: flex;
       p {
