--- a/thj/css/master.less
+++ b/thj/css/master.less
@@ -65,8 +65,7 @@ body {
     }
     th:not(:last-child),
     td:not(:last-child) {
-      // border-right: 1px solid rgb(65, 32, 43);
-      box-shadow: inset -1px 0 0 rgb(55, 50, 44);
+      box-shadow: inset -1px 0 0 #41404c;
     }
     tr:nth-child(even) {
       background-color: rgb(51, 46, 40);
