--- a/hsss/css/master.less
+++ b/hsss/css/master.less
@@ -74,11 +74,11 @@ body {
     }
     tr:nth-child(even) {
       // background-color: rgb(101, 51, 50);
-      background-color: rgb(86, 81, 82);
+      background-color: #653332;
     }
     tr:nth-child(odd):not(:first-child) {
       // background-color: rgb(90, 43, 44);
-      background-color: rgb(79, 74, 75);
+      background-color: #592b2d;
     }
     tr td:nth-child(7) {
       font-size: 0;
