--- a/92slot/css/main.less
+++ b/92slot/css/main.less
@@ -543,18 +543,18 @@ img:not(.logo, .more, .footBar img) {
 }
 
 // 进入动画
-// body {
-//   opacity: 0;
-//   animation: opacityAni 2s ease-in-out 0.6s forwards 1;
-// }
-// @keyframes opacityAni {
-//   0% {
-//     opacity: 0;
-//   }
-//   100% {
-//     opacity: 1;
-//   }
-// }
+body {
+  opacity: 0;
+  animation: opacityAni 2s ease-in-out 0.6s forwards 1;
+}
+@keyframes opacityAni {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
 @media screen and (min-width: 640px) {
   html {
