--- a/Gold4444Agent/css/main.less
+++ b/Gold4444Agent/css/main.less
@@ -363,7 +363,7 @@ img:not(.logo, .more) {
 
 .screen5 {
   position: relative;
-  height: 120vw;
+  height: 75vh;
   > div {
     width: 96%;
     height: 137.9vw;
