--- a/css/master.less
+++ b/css/master.less
@@ -1,10 +1,7 @@
-@font-face {
-  font-family: hyzy;
-  src: url("../font/hyzy.woff") format("woff");
-}
 
 body {
   background-color: #fff;
+  font-family: "Microsoft Yahei", Tahoma, Arial, Helvetica, sans-serif;
 }
 
 #app {
@@ -16,17 +13,23 @@ body {
   transform: translate(-50%, -50%);
 }
 
+
 .bg {
+  position: relative;
   width: 1218px;
   font-size: 0;
+  overflow: hidden;
   img {
     width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    &:first-child {
+    &:first-child{
+      object-fit: cover;
+    }
+    &:nth-child(2) {
       position: relative;
-      height: 562px;
     }
   }
 }
@@ -40,7 +43,6 @@ body {
   overflow: hidden;
   overflow-y: hidden;
   table {
-    font-family: hyzy;
     border-collapse: collapse;
     th {
       padding-top: 3px;
@@ -104,6 +106,73 @@ body {
       white-space: nowrap;
     }
   }
+  &.red{
+    width: 742px;
+    height: 275px;
+    top: 122px;
+    left: 264px;
+    .item {
+      *{
+        box-shadow: unset;
+      }
+      #tr{
+        th{
+          position: relative;
+          color: #fff;
+          font-weight: 1000;
+          -webkit-text-stroke: 0.85px #ae7e53;
+          // background-color: rgba(255, 0, 0, 0.4);
+          padding: 0;
+          font-size: 17px;
+          height: 31px;
+          &:nth-child(1) {
+            width: 136px;
+          }
+          &:nth-child(2) {
+            width: 135.6px;
+          }
+          &:nth-child(3) {
+            width: 85px;
+          }
+          &:nth-child(4) {
+            width: 85px;
+          }
+          &:nth-child(5) {
+            width: 85px;
+          }
+          &:nth-child(6) {
+            width: 98px;
+          }
+          &:nth-child(7) {
+            width: 108px;
+          }
+          &:nth-child(8) {
+            width: 60px;
+          }
+        }
+      }
+      tr:nth-child(even) {
+        background: url(../img/red-table-bg1.png);
+        background-size: 100% 100%;
+        border-bottom: 0;
+      }
+      tr:nth-child(odd):not(:first-child) {
+        background: url(../img/red-table-bg2.png);
+        background-size: 100% 100%;
+        border-bottom: 0;
+      }
+      td{
+        padding: 0;
+        color: #9c7266;
+        height: 36.4px;
+        font-size: 14px;
+        img{
+          width: unset;
+          height: 32.5px;
+        }
+      }
+    }
+  }
 }
 
 .page {
@@ -123,15 +192,14 @@ body {
     margin: 0;
     width: 150px;
     margin-right: 92px;
-    font-family: hyzy;
     font-size: 15px;
   }
   p:nth-child(2) {
     margin: 0;
     width: 30px;
-    font-family: hyzy;
   }
 }
+
 
 .input {
   margin-top: 10px;
@@ -176,15 +244,35 @@ body {
   transition: 0.1s ease-in-out;
   &:hover {
     transform: translateY(-3px);
-    background-color: rgb(126, 208, 255);
+    filter: brightness(1.2);
   }
   &:active {
     transform: translate(0px);
-    background-color: rgb(40, 152, 216);
+    filter: brightness(0.7);
   }
 }
 
 .switch {
+  a:nth-child(1) button{
+      background-color: rgb(72,66,66);
+      color: rgb(213,171,121);
+  }
+  a:nth-child(2) button{
+    background-color: rgb(73,31,32);
+    color: rgb(213,171,121);
+  }
+  a:nth-child(3) button{
+    background-color: rgb(60,64,76);
+    color: rgb(216, 219, 229);
+  }
+  a:nth-child(4) button{
+    background-color: rgb(62,55,45);
+    color: rgb(255,226,162);
+  }
+  a:nth-child(5) button{
+    background-color: rgb(125,89,65);
+    color: rgb(255,221,139);
+  }
   button {
     border: 0;
     background-color: #afdaf6;
@@ -202,5 +290,9 @@ body {
     &:active {
       transform: translateY(4px);
     }
+  }
+  .red{
+    background-color: rgb(227, 103, 69);
+    color: rgb(255, 255, 255);
   }
 }
