--- a/css/master.less
+++ b/css/master.less
@@ -147,7 +147,9 @@ body {
             width: 108px;
           }
           &:nth-child(8) {
-            width: 60px;
+            width: 58px;
+            max-width: 58px;
+            min-width: 58px;
           }
         }
       }
@@ -227,6 +229,14 @@ body {
   right: 12px;
   width: 205px;
   height: 89px;
+  z-index: 1000;
+}
+
+.red-nottopay-pic{
+  position: absolute;
+  bottom: 196px;
+  right: 7.3px;
+  width: 201.5px;
   z-index: 1000;
 }
 
