--- a/ysyl/css/main.less
+++ b/ysyl/css/main.less
@@ -155,6 +155,7 @@ body {
       filter: drop-shadow(0 0 60px #000);
     }
     img:nth-child(6) {
+      top: 54%;
       left: 48.5%;
       filter: drop-shadow(0 0 60px #000);
     }
