--- a/AG-login/css/master.less
+++ b/AG-login/css/master.less
@@ -9,6 +9,10 @@
   margin: 0;
 }
 
+body{
+  background: #000;
+}
+
 .login-page {
   font-family: Microsoft YaHei,PingFang SC,HarmonyOS_Regular,Helvetica Neue,sans-serif;
   position: relative;
@@ -16,7 +20,6 @@
   height: 100vh;
   overflow: hidden;
   user-select: none;
-  background: #000;
 }
 
 .flex(@direction:row){
