--- a/AG-login/css/master.less
+++ b/AG-login/css/master.less
@@ -140,8 +140,8 @@ button{
     background-clip: text;
     margin: 0.6rem 0 2rem;
   }
-  &:hover ~ .bgv{
-    filter: brightness(0.4);
+  &:hover ~ #bgv{
+    filter: brightness(0.5);
   }
 }
 
@@ -303,7 +303,7 @@ button{
       border-radius: 0;
       animation-play-state: running;
       &:hover{
-        transform: scale(1);
+        transform: scale(1); 
       }
       &:active{
         transform: scale(0.95);
