--- a/AG-login/css/master.less
+++ b/AG-login/css/master.less
@@ -9,15 +9,22 @@
   margin: 0;
 }
 
-body{
-  background: #000;
+img,video,p, h4{
+  pointer-events: none;
+  user-select: none;
 }
 
-.login-page {
+
+body{
+  background: #000;
   font-family: Microsoft YaHei,PingFang SC,HarmonyOS_Regular,Helvetica Neue,sans-serif;
-  position: relative;
-  width: 100vw;
-  height: 100vh;
+  overflow: hidden;
+}
+
+
+.login-page {
+  position: fixed;
+  inset: 0 0 0 0;
   overflow: hidden;
   user-select: none;
 }
@@ -262,6 +269,7 @@ button{
       margin: 0 0.4rem 0 0.2rem;
       h4{
         font-size: 1rem;
+        color: #2c1e0c;
         line-height: 1;
         text-align: center;
         margin-bottom: 0.22rem;
@@ -299,7 +307,7 @@ button{
     button{
       padding: 0.4rem 0 0.5rem;
       margin: 0;
-      width: 106%;
+      width: 100%;
       border-radius: 0;
       animation-play-state: running;
       &:hover{
