--- a/watermark/index.less
+++ b/watermark/index.less
@@ -12,11 +12,13 @@
 
 .top{
   z-index: 1000;
+  margin: 10px 0;
 }
 
 .platfromSelect{
-  width: 150px;
+  width: 160px;
   padding: 10px 20px;
+  margin-right: 10px;
   color: #fff;
   font-weight: bold;
   border-radius: 5px;
@@ -39,17 +41,17 @@
     border-radius: 5px;
     display: none;
     img{
-      width: 100px;
-      padding: 5px 0;
+      width: 100%;
+      padding: 7px 0;
     }
   }
 }
 
 input[type="file"]{
   padding: 10px;
-  margin: 20px;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.05);
+  width: 164px;
   &::file-selector-button {
     padding: 10px 20px;
     color: #fff;
