--- a/tb_invoice/index.less
+++ b/tb_invoice/index.less
@@ -16,6 +16,12 @@ input{
   margin-bottom: 5px;
 }
 
+button{
+  padding: 5px;
+  outline: none;
+  border: 0;
+}
+
 body{
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   user-select: none;
@@ -150,4 +156,9 @@ h1,h2{
   width: 900px;
   margin-top: 30px;
   line-height: 1.6;
+}
+
+.active{
+  background-color: @blue;
+  color: #fff;
 }
